k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-worker
  namespace: iot-pipeline
spec:
  selector:
    app: iot-worker
  ports:
    - name: http
      port: 80
      targetPort: http
